--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     
+    <header class="header">
+        <div class="menu-container">
+            <a href="#" class="logo">LOGO</a>
+        </div>
+    </header>
 
     <script src="main.js"></script>
 </body>
