agrege un input

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <header class="header">
         <div class="menu-container">
             <a href="#" class="logo">LOGO</a>
+            <input type="checkbox" id="menu"/>
+            <label for="menu">
+                <img src="" class="menu-icono" alt="imagen-menu">
+            </label>
         </div>
     </header>
 
