--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
             <label for="menu">
                 <img src="" class="menu-icono" alt="imagen-menu">
             </label>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Inicio</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
