--- a/index.html
+++ b/index.html
@@ -24,6 +24,27 @@
                     <li><a href="#">Inicio</a></li>
                 </ul>
             </nav>
+            <div>
+                <ul>
+                    <li class="submenu">
+                        <img src="" id="img-carrito" alt="imagen-carrito">
+                        <div id="carrito">
+                            <table id="lista-carrito">
+                                <thead>
+                                    <tr>
+                                        <th>Imagen</th>
+                                        <th>Nombre</th>
+                                        <th>Precio</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody></tbody>
+                            </table>
+                            <a href="#" id="vaciar-carrito" class="btn-2">Vaciar Carrito</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </header>
 
