agrege el header

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
                 </ul>
             </div>
         </div>
+
+        <div class="header-content container">
+            <div class="header.txt">
+                <span>Ofertas</span>
+                <h1>Frutas y Verduras</h1>
+            </div>
+        </div>
     </header>
 
     <script src="main.js"></script>
