agrege un h2-p-imagen

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
             <div class="header.txt">
                 <span>Ofertas</span>
                 <h1>Frutas y Verduras</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus velit doloribus mollitia, explicabo atque placeat quisquam porro quibusdam corrupti voluptates sunt maiores nisi dignissimos consequuntur beatae quam. Magni, ea eligendi.</p>
+                <a href="#" class="btn-1">Infotmacion</a>
+            </div>
+            <div class="header-img">
+                <img src="" alt="">
             </div>
         </div>
     </header>
