--- a/index.html
+++ b/index.html
@@ -60,6 +60,29 @@
         </div>
     </header>
 
+    <section class="informacion container">
+        <div class="informacion-content">
+            <div class="informacion-1">
+                <img src="" alt="">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+
+            <div class="informacion-1">
+                <img src="" alt="">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+
+            <div class="informacion-1">
+                <img src="" alt="">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+
+        </div>
+    </section>
+
     <script src="main.js"></script>
 </body>
 </html>
