agregue el main

--- a/index.html
+++ b/index.html
@@ -124,6 +124,29 @@
         </div>
     </section>
 
+    <main class="product container" id="lista-1">
+        <h1>productos destacados</h1>
+
+        <div class="product-content">
+            <div class="product">
+                <img src="" alt="">
+                <div class="product-txt">
+                    <h3>producto</h3>
+                    <p class="precio">$0000</p>
+                    <a href="#" class="agregar-carrito btn-2" data-id="1">agregar</a>
+                </div>
+            </div>
+            <div class="product">
+                <img src="" alt="">
+                <div class="product-txt">
+                    <h3>producto</h3>
+                    <p class="precio">$0000</p>
+                    <a href="#" class="agregar-carrito btn-2" data-id="2">agregar</a>
+                </div>
+            </div>
+        </div>
+    </main>
+
     <script src="main.js"></script>
 </body>
 </html>
