agrege nueva section de servicios

--- a/index.html
+++ b/index.html
@@ -147,6 +147,18 @@
         </div>
     </main>
 
+    <section class="service">
+        <div class="service-1">
+            <img class="store" src="" alt="">
+        </div>
+        <div class="service-2">
+            <img class="store" src="" alt="">
+        </div>
+        <div class="service-3">
+            <img class="store" src="" alt="">
+        </div>
+    </section>
+
     <script src="main.js"></script>
 </body>
 </html>
