agrege section de contacto

--- a/index.html
+++ b/index.html
@@ -159,6 +159,13 @@
         </div>
     </section>
 
+    <section class="contact container">
+        <form>
+            <input type="email" placeholder="correo">
+            <input type="submit" class="btn-3">
+        </form>
+    </section>
+
     <script src="main.js"></script>
 </body>
 </html>
