--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+
     <header class="header">
         <div class="menu-container">
             <a href="#" class="logo">LOGO</a>
-            <input type="checkbox" id="menu"/>
+            <input type="checkbox" id="menu" />
             <label for="menu">
                 <img src="" class="menu-icono" alt="imagen-menu">
             </label>
@@ -51,7 +53,9 @@
             <div class="header.txt">
                 <span>Ofertas</span>
                 <h1>Frutas y Verduras</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus velit doloribus mollitia, explicabo atque placeat quisquam porro quibusdam corrupti voluptates sunt maiores nisi dignissimos consequuntur beatae quam. Magni, ea eligendi.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus velit doloribus mollitia,
+                    explicabo atque placeat quisquam porro quibusdam corrupti voluptates sunt maiores nisi dignissimos
+                    consequuntur beatae quam. Magni, ea eligendi.</p>
                 <a href="#" class="btn-1">Infotmacion</a>
             </div>
             <div class="header-img">
@@ -166,6 +170,21 @@
         </form>
     </section>
 
+    <footer class="footer">
+        <div class="footer-content container">
+            <div class="link">
+                <h3>lo9rem</h3>
+                <ul>
+                    <li><a href="#">Lorem.</a></li>
+                    <li><a href="#">Lorem.</a></li>
+                    <li><a href="#">Lorem.</a></li>
+                    <li><a href="#">Lorem.</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
     <script src="main.js"></script>
 </body>
+
 </html>
