--- a/index.html
+++ b/index.html
@@ -181,6 +181,33 @@
                     <li><a href="#">Lorem.</a></li>
                 </ul>
             </div>
+            <div class="link">
+                <h3>lo9rem</h3>
+                <ul>
+                    <li><a href="#">Lorem.</a></li>
+                    <li><a href="#">Lorem.</a></li>
+                    <li><a href="#">Lorem.</a></li>
+                    <li><a href="#">Lorem.</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <h3>lo9rem</h3>
+                <ul>
+                    <li><a href="#">Lorem.</a></li>
+                    <li><a href="#">Lorem.</a></li>
+                    <li><a href="#">Lorem.</a></li>
+                    <li><a href="#">Lorem.</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <h3>lo9rem</h3>
+                <ul>
+                    <li><a href="#">Lorem.</a></li>
+                    <li><a href="#">Lorem.</a></li>
+                    <li><a href="#">Lorem.</a></li>
+                    <li><a href="#">Lorem.</a></li>
+                </ul>
+            </div>
         </div>
     </footer>
 
