--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#" class="logo">LOGO</a>
             <input type="checkbox" id="menu" />
             <label for="menu">
-                <img src="" class="menu-icono" alt="imagen-menu">
+                <img src="media/car.svg" class="menu-icono" alt="imagen-menu">
             </label>
             <nav class="navbar">
                 <ul>
@@ -29,7 +29,7 @@
             <div>
                 <ul>
                     <li class="submenu">
-                        <img src="" id="img-carrito" alt="imagen-carrito">
+                        <img src="media/car.svg" id="img-carrito" alt="imagen-carrito">
                         <div id="carrito">
                             <table id="lista-carrito">
                                 <thead>
@@ -59,7 +59,7 @@
                 <a href="#" class="btn-1">Infotmacion</a>
             </div>
             <div class="header-img">
-                <img src="" alt="">
+                <img src="media/menu.png" alt="">
             </div>
         </div>
     </header>
@@ -67,19 +67,19 @@
     <section class="informacion container">
         <div class="informacion-content">
             <div class="informacion-1">
-                <img src="" alt="">
+                <img src="media/menu.png" alt="">
                 <h3>Lorem, ipsum dolor.</h3>
                 <p>Lorem ipsum dolor sit amet.</p>
             </div>
 
             <div class="informacion-1">
-                <img src="" alt="">
+                <img src="media/menu.png" alt="">
                 <h3>Lorem, ipsum dolor.</h3>
                 <p>Lorem ipsum dolor sit amet.</p>
             </div>
 
             <div class="informacion-1">
-                <img src="" alt="">
+                <img src="media/menu.png" alt="">
                 <h3>Lorem, ipsum dolor.</h3>
                 <p>Lorem ipsum dolor sit amet.</p>
             </div>
@@ -89,22 +89,22 @@
 
     <section class="oferta-container">
         <div class="oferta-1">
-            <img src="" alt="">
+            <img src="media/menu.png" alt="">
             <h3>Oferta</h3>
             <p>Premiun</p>
         </div>
         <div class="oferta-1">
-            <img src="" alt="">
+            <img src="media/menu.png" alt="">
             <h3>Oferta</h3>
             <p>Premiun</p>
         </div>
         <div class="oferta-1">
-            <img src="" alt="">
+            <img src="media/menu.png" alt="">
             <h3>Oferta</h3>
             <p>Premiun</p>
         </div>
         <div class="oferta-1">
-            <img src="" alt="">
+            <img src="media/menu.png" alt="">
             <h3>Oferta</h3>
             <p>Premiun</p>
         </div>
@@ -112,17 +112,17 @@
 
     <section class="oferta-container">
         <div class="oferta-1">
-            <img src="" alt="">
+            <img src="media/menu.png" alt="">
             <h3>Oferta</h3>
             <p>Premiun</p>
         </div>
         <div class="oferta-1">
-            <img src="" alt="">
+            <img src="media/menu.png" alt="">
             <h3>Oferta</h3>
             <p>Premiun</p>
         </div>
         <div class="oferta-1">
-            <img src="" alt="">
+            <img src="media/menu.png" alt="">
             <h3>Oferta</h3>
             <p>Premiun</p>
         </div>
@@ -133,7 +133,7 @@
 
         <div class="product-content">
             <div class="product">
-                <img src="" alt="">
+                <img src="media/menu.png" alt="">
                 <div class="product-txt">
                     <h3>producto</h3>
                     <p class="precio">$0000</p>
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="" alt="">
+                <img src="media/menu.png" alt="">
                 <div class="product-txt">
                     <h3>producto</h3>
                     <p class="precio">$0000</p>
