--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
 
     <section class="service">
         <div class="service-1">
-            <img class="store" src="" alt="">
+            <img class="store" src="media/menu.png" alt="">
         </div>
         <div class="service-2">
-            <img class="store" src="" alt="">
+            <img class="store" src="media/menu.png" alt="">
         </div>
         <div class="service-3">
-            <img class="store" src="" alt="">
+            <img class="store" src="media/menu.png" alt="">
         </div>
     </section>
 
